docs: fix clipped `docs-code` block in `docs-reference-api-tab` (#54621)
PR Close #54621

--- a/adev/src/app/features/references/api-reference-details-page/api-reference-details-page.component.scss
+++ b/adev/src/app/features/references/api-reference-details-page/api-reference-details-page.component.scss
@@ -99,6 +99,8 @@
     display: flex;
     gap: 1.81rem;
     align-items: flex-start;
+    margin-bottom: 1px;
+
     @include mq.for-desktop-down {
       flex-direction: column;
     }
